syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantJobApplicationService{
    rpc GetApplicantJobApplication(IdRequestApplicantJobApplication) returns (ApplicantJobApplicationObj);
    rpc CreateApplicantJobApplication(ApplicantJobApplicationObjs) returns (google.protobuf.Empty);
    rpc UpdateApplicantJobApplication(ApplicantJobApplicationObjs) returns (google.protobuf.Empty);
    rpc DeleteApplicantJobApplication(ApplicantJobApplicationObjs) returns (google.protobuf.Empty);
}
message IdRequestApplicantJobApplication{
    string Id = 1;
}
message ApplicantJobApplicationObj{
        string Id = 1;
        string Applicant = 2;
        string Job = 3;        
        google.protobuf.Timestamp ApplicationDate = 4;               
}
message ApplicantJobApplicationObjs{
	repeated ApplicantJobApplicationObj Obj = 1;
}
